# rust_o11y

./: .envrc  .envrc.defaults  .gitignore  Cargo.toml  Justfile  docker-compose.yml  otel-collector-config.yml
crates/instrument/: Cargo.toml
crates/instrument/src/: level.rs  lib.rs  metrics.rs  traces.rs
crates/instrument/src/http/: client.rs
crates/instrument/src/http/server/: metrics.rs  mod.rs  traces.rs
crates/instrument/src/logs/: mod.rs  store.rs
src/: instrument.rs  main.rs
src/instrument/: level.rs  logs.rs  metrics.rs  mod.rs  traces.rs
src/instrument/logs/: store.rs
