[workspace]
members = [
	"bin",
	"crates/instrument",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT"
authors = ["Bruno Felipe Leal Delfino <bruno.delfino1995@gmail.com>"]
repository = "https://github.com/bruno-delfino1995/gollum"

[workspace.dependencies]
axum = "0.5.17"
chrono = "0.4.23"
futures = "0.3.25"
instrument = { path = "./crates/instrument", version = "=0.0.0"}
metrics = "0.20.1"
once_cell = "1.16.0"
reqwest = "0.11.13"
reqwest-middleware = "0.2.0"
serde = "1.0.148"
serde_json = "1.0.89"
tokio = { version = "1.24.2", features = ["full"] }
tracing = "0.1.37"

[profile.release]
strip = "debuginfo"
